--- a/rpn_manual.html
+++ b/rpn_manual.html
@@ -59,8 +59,8 @@ figcaption {
 <p>这是一个功能完整的<strong>逆波兰表示法（Reverse Polish Notation, RPN）计算器</strong>，使用C++编写。
 RPN是一种无需括号的数学表达式表示方法，操作符位于操作数之后。</p>
 <p><strong>版本</strong>: v1.0<br />
-**作者**: [Your Name]<br />
-<strong>日期</strong>: 2025年9月</p>
+<strong>作者</strong>: cjj <br />
+<strong>日期</strong>: 2025年10月</p>
 <hr />
 <h2>什么是RPN？</h2>
 <p>在逆波兰表示法中，运算符跟在操作数后面。例如：</p>
